# sys-scan-graph

./: .gitattributes  .gitignore  ARCHITECTURE.md  BuildInfo.h.in  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DATASET_SETUP.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  SECURITY_ARCHITECTURE.md  TODO.md  agent_baseline.db  cleanup_repo.sh  debug_regex  debug_regex.cpp  debug_rule_load.cpp  debug_test.cpp  debug_time  debug_time.cpp  diagnose.sh  enriched_report.html  generate_massive_dataset.sh  manifest.json  test_escape  test_escape.cpp  test_list_files  test_list_files.cpp  test_scanner_debug  test_scanner_debug.cpp  test_scanner_debug2  test_scanner_debug2.cpp  test_scanner_debug3  test_scanner_debug3.cpp  test_suid_debug  test_suid_debug.cpp  test_suid_specific  (+1 more)
.github/workflows/: ci.yml  codeql.yml  release.yml
agent/: .coverage  AGENT_ENHANCEMENT_ROADMAP.md  README.md  cli.py  data_governance.py  download_mistral_authenticated.py  establish_baseline.py  graph.py  graph_analysis.py  graph_nodes.py  graph_nodes_enhanced.py  graph_nodes_performance.py  graph_nodes_scaffold.py  graph_nodes_scalability.py  graph_state.py  knowledge.py  llm_provider.py  llm_provider_enhanced.py  models.py  performance_baseline.py  pipeline.py  report_html.py  requirements.txt  rules.py  setup.py  split_lora_adapter.py  tools.py
agent/artifacts/: perf_baseline.json
agent/legacy/: audit.py  baseline.py  calibration.py  canonicalize.py  config.py  data_governance.py  endpoint_classification.py  executors.py  graph.py  graph_analysis.py  graph_nodes.py  graph_nodes_performance.py  graph_nodes_reliability.py  integrity.py  metrics.py  models.py  pipeline.py  risk.py
agent/mistral-security-lora/: README.md  adapter_config.json
agent/ml_env/: pyvenv.cfg
agent/ml_pipeline/: README.md  colab_one_cell.py  colab_train.py  data_loader.py  download_dataset.py  quantize_models.py  train_generalist.py  train_specialist.py
agent/prompt_templates/: __init__.py
agent/providers/: langchain_provider.py
agent/schema/: fleet_report.schema.json
agent/synthetic_data/: correlation_registry.py  data_transformation_pipeline.py  generate_dataset.py  parallel_processor.py  producer_registry.py  refine_dataset.py  refined_massive_dataset.json  synthetic_data_pipeline.py
agent/sys-scan-llama-agent-trainer/: adapter_config.json
agent/sys_scan_graph_agent/: cli.py  graph.py  graph_nodes.py  graph_nodes_scaffold.py  hf_loader.py  llm_provider.py
agent/tests/: test_advanced_router.py  test_advanced_rule_scoring.py  test_attack_coverage.py  test_audit.py  test_causal_hypotheses.py  test_compliance_integration.py  test_compromised_dev_host_snapshot.py  test_contract_deterministic.py  test_counterfactual.py  test_deterministic_hashing.py  test_enhanced_graph_integration.py  test_enhanced_suggest_rules.py  test_enhanced_summarize.py  test_evaluation.py  test_exports.py  test_fleet_report_schema.py  test_graph_cycle.py  test_graph_scaffold_workflow.py  test_graph_with_toolnode.py  test_graphstate_normalize.py  test_input_security.py  test_integrity.py  test_knowledge_signatures.py  test_policy.py  (+23 more)
artifacts/: perf_baseline.json
assets/: README.md  optimize-enhance-langchain.md
build-coverage/: coverage.info
coverage_report/: class_index.html  function_index.html  index.html  status.json  z_7a3744fe1c06e0c7___init___py.html  z_878421ee67462c12___init___py.html  z_878421ee67462c12_hashing_py.html  z_878421ee67462c12_pkg_py.html  z_e2a0fc020fba741d___init___py.html  z_e2a0fc020fba741d_audit_py.html  z_e2a0fc020fba741d_baseline_py.html  z_e2a0fc020fba741d_calibration_py.html  z_e2a0fc020fba741d_canonicalize_py.html  z_e2a0fc020fba741d_cli_py.html  z_e2a0fc020fba741d_config_py.html  z_e2a0fc020fba741d_counterfactual_py.html  z_e2a0fc020fba741d_data_governance_py.html  z_e2a0fc020fba741d_db_pool_py.html  z_e2a0fc020fba741d_endpoint_classification_py.html  z_e2a0fc020fba741d_evaluation_py.html  z_e2a0fc020fba741d_graph_analysis_py.html  z_e2a0fc020fba741d_graph_nodes_scaffold_py.html  z_e2a0fc020fba741d_graph_py.html  z_e2a0fc020fba741d_graph_state_py.html  z_e2a0fc020fba741d_hf_loader_py.html  z_e2a0fc020fba741d_integrity_py.html  z_e2a0fc020fba741d_knowledge_py.html  z_e2a0fc020fba741d_llm_cache_py.html  z_e2a0fc020fba741d_llm_models_py.html  z_e2a0fc020fba741d_llm_provider_enhanced_py.html  z_e2a0fc020fba741d_llm_provider_py.html  z_e2a0fc020fba741d_llm_py.html  z_e2a0fc020fba741d_metrics_exporter_py.html  z_e2a0fc020fba741d_metrics_node_py.html  z_e2a0fc020fba741d_metrics_py.html  z_e2a0fc020fba741d_migration_v3_py.html  z_e2a0fc020fba741d_models_py.html  z_e2a0fc020fba741d_performance_baseline_py.html  z_e2a0fc020fba741d_pipeline_py.html  z_e2a0fc020fba741d_rarity_generate_py.html  (+17 more)
debian/: README.Debian  changelog  control  copyright  files  postinst  sys-scan.1
docs/: REFACTORING.md  TEST_COVERAGE.md  metrics_dashboard.md
fuzz/: fuzz_config.cpp
schema/: v2.json
spec/: tool_contract.md
src/: main.cpp
tests/: test_argument_parser.cpp  test_argument_parser_extended.cpp  test_auditd_scanner.cpp  test_auditd_scanner_extended.cpp  test_canonical_golden.cpp  test_compliance.cpp  test_comprehensive_system.cpp  test_config_validator.cpp  test_config_validator_extended.cpp  test_container_scanner.cpp  test_gpg_signer_extended.cpp  test_integration_extended.cpp  test_integrity_scanner.cpp  test_ioc_scanner.cpp  test_json_schema_smoke.cpp  test_json_writer.cpp  test_jsonutil.cpp  test_kernel_hardening_scanner.cpp  test_logging.cpp  test_meta_suppression.cpp  test_module_scanner_extended.cpp  test_module_utils.cpp  test_mount_scanner.cpp  test_ndjson_mitre.cpp  test_output_writer_extended.cpp  test_privilege.cpp  test_privilege_comprehensive.cpp  test_privilege_extended.cpp  test_privilege_simple.cpp  test_rule_engine.cpp  test_rule_engine_initializer.cpp  test_rule_engine_initializer_extended.cpp  test_rules_engine.cpp  test_sarif_smoke.cpp  test_scanner.cpp  test_scanner_registry.cpp  test_suid_expected.cpp  test_suid_scanner.cpp  test_system_extended.cpp  test_systemd_unit_scanner.cpp  (+3 more)
(+235 files in other folders)
